@@ -4,6 +4,7 @@
 	* Sokoban luck penalty removed and added tracking of solving Sokoban
 	  without any tricks
 	* Monster generation increasing with turn count (from SporkHack)
+	* Galloping duration depends on riding skills (idea by Beolach, code by Pasi Kallinen)
 	
 	* New config option for customizing monster letter in UTF8graphics:
 	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke
